kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: front-end
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - front-end
              topologyKey: kubernetes.io/hostname
      containers:
      - name: front-end
        image: front-end:IMAGE_PLACEHOLDER
        resources:
          limits:
            memory: "32Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: "/"
            port: "http"
          periodSeconds: 4
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: "/"
            port: "http"
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "90"]
      terminationGracePeriodSeconds: 101
