kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  ports:
  - port: 80
    targetPort: 80
    name: http
